<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ============================== -->
    <!-- SPRING BOOT -->
    <!-- ============================== -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>


    <!-- ============================== -->
    <!-- PROJECT -->
    <!-- ============================== -->

    <groupId>com.serviceconnect</groupId>
    <artifactId>catalog-service</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>catalog-service</name>
    <description>ServiceConnect Catalog Service</description>


    <!-- ============================== -->
    <!-- PROPERTIES -->
    <!-- ============================== -->

    <properties>
        <java.version>21</java.version>

        <!-- Spring Cloud -->
        <spring-cloud.version>2025.1.3</spring-cloud.version>
    </properties>


    <!-- ============================== -->
    <!-- DEPENDENCIES -->
    <!-- ============================== -->

    <dependencies>

        <!-- ============================== -->
        <!-- WEB MVC -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- JPA -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- DATABASE -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>


        <!-- ============================== -->
        <!-- FLYWAY -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-flyway</artifactId>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- SECURITY -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- JWT RESOURCE SERVER -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- VALIDATION -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- ACTUATOR -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- EUREKA CLIENT -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>


        <!-- ============================== -->
        <!-- LOMBOK -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>


        <!-- ============================== -->
        <!-- TEST -->
        <!-- ============================== -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-flyway-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <!-- ============================== -->
    <!-- SPRING CLOUD BOM -->
    <!-- ============================== -->

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <!-- ============================== -->
    <!-- BUILD -->
    <!-- ============================== -->

    <build>
        <plugins>

            <!-- Spring Boot -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>


            <!-- Maven Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>

                <executions>

                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>

                        <goals>
                            <goal>compile</goal>
                        </goals>

                        <configuration>
                            <annotationProcessorPaths>

                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                </path>

                            </annotationProcessorPaths>
                        </configuration>

                    </execution>


                    <execution>
                        <id>default-testCompile</id>
                        <phase>test-compile</phase>

                        <goals>
                            <goal>testCompile</goal>
                        </goals>

                        <configuration>
                            <annotationProcessorPaths>

                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                </path>

                            </annotationProcessorPaths>
                        </configuration>

                    </execution>

                </executions>

            </plugin>

        </plugins>
    </build>

</project>